add snn simulate page

--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -58,34 +58,34 @@
             训练集样例数据
           </div>
           <ul id="sample_imgs_ul" style="height: 300px;width: 100px;overflow: auto;display: inline-block;">
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img0_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img0" onclick="sample_img_click(this);" src="${sample0}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img1_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img1" onclick="sample_img_click(this);" src="${sample1}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img2_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img2" onclick="sample_img_click(this);" src="${sample2}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img3_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img3" onclick="sample_img_click(this);" src="${sample3}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img4_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img4" onclick="sample_img_click(this);" src="${sample4}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img5_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img5" onclick="sample_img_click(this);" src="${sample5}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img6_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img6" onclick="sample_img_click(this);" src="${sample6}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img7_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img7" onclick="sample_img_click(this);" src="${sample7}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img8_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img8" onclick="sample_img_click(this);" src="${sample8}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="sample_img9_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img9" onclick="sample_img_click(this);" src="${sample9}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
           </ul>
@@ -96,34 +96,34 @@
             测试集样例数据
           </div>
           <ul id="test_sample_imgs_ul" style="height: 300px;width: 100px;overflow: auto;display: inline-block;">
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img0_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img0" onclick="sample_img_click(this);" src="${test_sample0}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img1_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img1" onclick="sample_img_click(this);" src="${test_sample1}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img2_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img2" onclick="sample_img_click(this);" src="${test_sample2}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img3_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img3" onclick="sample_img_click(this);" src="${test_sample3}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img4_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img4" onclick="sample_img_click(this);" src="${test_sample4}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img5_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img5" onclick="sample_img_click(this);" src="${test_sample5}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img6_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img6" onclick="sample_img_click(this);" src="${test_sample6}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img7_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img7" onclick="sample_img_click(this);" src="${test_sample7}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img8_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img8" onclick="sample_img_click(this);" src="${test_sample8}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
-            <li style="list-style: none;margin-bottom: 10px;">
+            <li id="test_sample_img9_li" style="list-style: none;margin-bottom: 10px;">
               <img id="test_sample_img9" onclick="sample_img_click(this);" src="${test_sample9}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
           </ul>
@@ -188,7 +188,8 @@ body {
 <script>
 
 
-
+var prev_click_img_li_id = undefined;
+var prev_click_img_li_test_id = undefined;
 var data_info=undefined;
 $(document).ready(function(){
   // display_data_bar_chart(['0','1','2','3','4','5','6','7','8','9'],
@@ -250,6 +251,19 @@ $(document).ready(function(){
 
 function sample_img_click(e){
   var sampleId = $(e).attr("id");
+  if(sampleId.substring(0,4) === "test"){
+    if(prev_click_img_li_test_id !== undefined){
+      document.getElementById(prev_click_img_li_test_id).style.backgroundColor="";
+    }
+    prev_click_img_li_test_id = sampleId+"_li";
+    document.getElementById(prev_click_img_li_test_id).style.backgroundColor = "chocolate";
+  }else{
+    if(prev_click_img_li_id !== undefined){
+      document.getElementById(prev_click_img_li_id).style.backgroundColor = "";
+    }
+    prev_click_img_li_id = sampleId+"_li";
+    document.getElementById(prev_click_img_li_id).style.backgroundColor = "chocolate";
+  }
   console.log("current click img id="+sampleId);
   var sampleIdx = parseInt(sampleId.substring(sampleId.length-1));
   if(sampleId.substring(0,4) === "test"){
