--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -156,6 +156,14 @@
             <div style="margin-top: 100px;">
                 <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;">脉冲神经网络输出层脉冲</div>
                 <ul id="sample_imgs_ul" style="height: 300px;width: 100px;overflow-x: hidden;display: inline-block;">
+                    <!-- <li style="list-style: none;margin-bottom: 10px;">
+                        <img style="height: 50px;width: 50px;">
+                        <span style="text-align: center;">测试标签</span>
+                    </li>
+                    <li style="list-style: none;margin-bottom: 10px;background-color: chocolate;">
+                        <img style="height: 50px;width: 50px;">
+                        <span style="text-align: center;">测试标签</span>
+                    </li> -->
                 </ul>
                 <div id="spike_charts" style="width: 420px;height: 340px;margin-left: 25px;display: inline-block;"></div>
             </div>
@@ -211,6 +219,8 @@ const vscode = acquireVsCodeApi();
 
 let log_output_lists = new Array();
 
+    let prev_clicked_img_li_id=undefined;
+
       $(document).ready(function(){
           window.addEventListener("message", function(evt){
               console.log("ANN 转SNN 模型接收到extension 消息："+evt.data);
@@ -223,6 +233,7 @@ let log_output_lists = new Array();
                 document.getElementById("log_output_div").scrollTop = document.getElementById("log_output_div").scrollHeight;
               }else if(data.exec_finish){
                   // 结束
+                  document.getElementById("start_convert_btn").style.backgroundColor = "";
               }else if(data.snn_info){
                   // snn 相关数据
                   const infos = JSON.parse(data.snn_info);
@@ -235,20 +246,33 @@ let log_output_lists = new Array();
 
                   for(let i=0;i<test_img_uris.length;++i){
                     var img_li = document.createElement("li");
+                    img_li.id = "img_li_"+i;
                     img_li.style.listStyle = "none";
                     img_li.style.marginBottom = "10px";
                     var img_tag = document.createElement("img");
                     img_tag.id = "sample_img_"+i;
-                    img_tag.onclick = function(){
-                      console.log("draw NO."+i+" img and spikes");
-                      display_spike_scatter_chart(test_img_spikes[i].cls_names, test_img_spikes[i].spike_tuples);
-                    }
                     img_tag.src = test_img_uris[i];
                     img_tag.style.width = "50px";
                     img_tag.style.height = "50px";
 
                     img_li.appendChild(img_tag);
                     test_img_uls.appendChild(img_li);
+
+                    var label_span = document.createElement("span");
+                    label_span.innerText = "标签: "+test_img_uris[i].split("_")[5].split(".")[0];
+                    img_li.appendChild(label_span);
+
+                    img_tag.onclick = function(){
+                      console.log("draw NO."+i+" img and spikes");
+                      console.log("reset background color of prev:"+prev_clicked_img_li_id);
+                      if(prev_clicked_img_li_id !== undefined){
+                          document.getElementById(prev_clicked_img_li_id).style.backgroundColor = "";
+                      }
+                      console.log("set background color of li: "+ "img_li_"+i);
+                      document.getElementById("img_li_"+i).style.backgroundColor = "chocolate";
+                      prev_clicked_img_li_id = "img_li_"+i;
+                      display_spike_scatter_chart(test_img_spikes[i].cls_names, test_img_spikes[i].spike_tuples);
+                    }
                   }
               }
           });
@@ -259,6 +283,7 @@ let log_output_lists = new Array();
               let synapse_dt = $("#select_synapse_dt").val().replace("ms","");
               let delay = $("#select_delay").val().replace("ms", "");
               let dura = $("#select_dura").val().replace("ms","");
+              document.getElementById("start_convert_btn").style.backgroundColor = "chocolate";
               console.log("v_thresh="+v_thresh+", neuron_dt="+neuron_dt+", synapse_dt="+synapse_dt+", delay="+delay);
               vscode.postMessage(JSON.stringify({"model_convert_params":{
                   "vthresh": v_thresh,
